# note

./: .gitignore  .merlin  Makefile  README.md  config.ml  config.mli  dune  dune-project  find.ml  io.ml  io.mli  main.ml  note.ml  note.mli  note.opam  slug.ml  slug.mli
completion/: note.bash
contrib/: note-on-modification  note-on-sync  note_commit.sh
db/: note-20200817-1.md  task-1.md  task-3.md
doc/: note-cat.1.scd  note-config.1.scd  note-create.1.scd  note-delete.1.scd  note-edit.1.scd  note-ls.1.scd  note-sync.1.scd  note.1  note.1.scd  note.5  note.5.scd  note.7
docker/: Dockerfile.alpine  Dockerfile.debian
lib/: cmd.ml  cmd.mli  config.ml  config.mli  display.ml  dune  html.ml  io.ml  io.mli  manifest.ml  note.ml  note.mli  slug.ml  slug.mli  sync.ml  util.ml
nvim/doc/: note.txt
nvim/lua/note/: init.lua
nvim/plugin/: note.vim
scripts/: build_docker.sh  extract_build_artifacts.sh  generate_arch_artifact.sh  generate_build.sh  generate_build_artifact.sh  generate_build_artifacts.sh  generate_deb_artifact.sh  generate_man_page.sh  generate_pkgbuild.sh  release.sh
test/: config_test.ml  display_test.ml  dune  e2e.ml  filter.ml  manifest_test.ml  note-0.md  note-1.md  note_test.ml  search.ml  slug_test.ml
