opam-version: "2.0"
version: "0.6.1"
synopsis: "Note is a simple CLI based note taking program"
description: "Note is a simple CLI based note taking program"
maintainer: ["Kevin Schoon <kevinschoon@gmail.com>"]
authors: ["Kevin Schoon <kevinschoon@gmail.com>"]
license: "AGPL3"
homepage: "https://github.com/kevinschoon/note"
bug-reports: "https://github.com/kevinschoon/note/issues"
depends: [
  "ANSITerminal" {>= "0.8.2"}
  "base" {>= "v0.14.0"}
  "core" {>= "v0.14.0"}
  "dune" {>= "2.7" & >= "2.7"}
  "ezjsonm" {>= "1.2.0"}
  "omd" {>= "1.3.1"}
  "stdio" {>= "v0.14.0"}
  "yaml" {>= "2.1.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depexts: ["pkg-config" "m4"]
dev-repo: "git+https://github.com/kevinschoon/note.git"
